@@ -17,7 +17,6 @@ yanoid before the game can be considered ready for the contest.
 
 * Menu
 - Add help and about texts (JCD,MBD,BS)?
-- Background is missing from a number of menus (MBD)
 
 * Powerups
 
