@@ -3,6 +3,7 @@
 	* Sound
 	Added soundmanager
 	Added sound when a brick goes (should probably be scriptable)
+	Fixed menu background missing
 
 2001-11-17  Mads Bondo Dydensborg  <madsdyd@mother>
 
